--- a/.github/workflows/weekly_booking.yml
+++ b/.github/workflows/weekly_booking.yml
@@ -26,4 +26,4 @@ jobs:
     - name: Run Weekly Booking Script
       run: |
         echo "Log level
-        python weekly_booking.py
+        python clc.py
