--- a/.github/workflows/weekly_booking.yml
+++ b/.github/workflows/weekly_booking.yml
@@ -2,7 +2,8 @@ name: Weekly Booking
 
 on:
   schedule:
-    - cron: '45 0 * * *'
+    # - cron: '45 0 * * *'
+    - cron: '25 22 * * *'
 
 jobs:
   booking:
