--- a/.github/workflows/weekly_booking.yml
+++ b/.github/workflows/weekly_booking.yml
@@ -3,8 +3,8 @@ name: Weekly Booking
 on:
   schedule:
     # - cron: '45 0 * * *'
-    - cron: '25 22 * * *'
-
+    # - cron: '25 22 * * *'
+    - cron: '30 14 * * *'
 jobs:
   booking:
     runs-on: ubuntu-latest
