--- a/.github/workflows/weekly_booking.yml
+++ b/.github/workflows/weekly_booking.yml
@@ -2,9 +2,8 @@ name: Weekly Booking
 
 on:
   schedule:
-    - cron: '45 0 * * *'
-    # - cron: '25 22 * * *'
-    # - cron: '30 14 * * *'
+    # - cron: '45 0 * * *' #12:45 am UTC
+    - corn: '30 8 * * *' #8:30 am UTC
   workflow_dispatch:
   
 jobs:
