--- a/.github/workflows/weekly_booking.yml
+++ b/.github/workflows/weekly_booking.yml
@@ -3,7 +3,7 @@ name: Weekly Booking
 on:
   schedule:
     # - cron: '45 0 * * *' #12:45 am UTC
-    - corn: '30 8 * * *' #8:30 am UTC
+    - cron: '30 8 * * *' #8:30 am UTC
   workflow_dispatch:
   
 jobs:
